<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_background"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register"
                android:id="@+id/registerText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/main"/>

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="Phone"
                android:inputType="number"
                android:drawableLeft="@drawable/baseline_person_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:maxLength="10"/>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Email"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:drawableLeft="@drawable/baseline_outgoing_mail_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/baseline_password_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:maxLength="10"/>

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Address"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_address"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>
            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Register"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_button"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
